--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rollup": "^3.15.0",
     "rollup-plugin-dts": "^5.2.0",
     "rollup-plugin-node-externals": "^5.1.2",
+    "tslib": "^2.7.0",
     "typescript": "^4.9.5"
   },
   "exports": {
